# metodos-numericos-eq-gerais-uff

./: .gitignore  README.md  config_exemplo.yaml  main.py  pyproject.toml  requirements.txt  run.sh
apresentacao/: apresentacao_pag19.tex  topicos_apresentacao.tex
slide/: Makefile  README.md  apresentacao.tex  apresentacao_overleaf.tex  conclusoes.tex  discussao.tex  preambulo.tex  referencias_metodos.tex  resultados.tex  teoria.tex
slide_overleaf/: conclusoes.tex  discussao.tex  final.tex  ia_ferramenta.tex  introducao.tex  metodologia.tex  preambulo.tex  referencias_metodos.tex  resultados.tex
